# Bjorn

./: .gitignore  Cargo.toml  README.md  discord.Dockerfile  minecraft.Dockerfile  ws_server.Dockerfile
bjorn/: Cargo.toml
bjorn/src/: main.rs
bjorn_macro/: Cargo.toml
bjorn_macro/src/: lib.rs
config/: Cargo.toml
config/src/: lib.rs
discord/: Cargo.toml
discord/src/: bot.rs  lib.rs  main.rs
discord/src/bot/: handler.rs
discord_config/: Cargo.toml
discord_config/src/: lib.rs
dumb_bjorn/: Cargo.toml
dumb_bjorn/src/: dumb_config.rs  main.rs
game_manager/: Cargo.toml
game_manager/src/: lib.rs  main.rs  manager.rs  server.rs  ws.rs
game_manager/src/server/: minecraft.rs
game_server/: Cargo.toml
game_server/src/: lib.rs  serenity.rs  ws_protocol.rs
game_server_macro/: Cargo.toml
game_server_macro/src/: lib.rs
games/: Cargo.toml
games/src/: lib.rs  main.rs  ws.rs
manager/: Cargo.toml
manager/src/: main.rs
minecraft/: Cargo.toml
minecraft/src/: client.rs  discord.rs  lib.rs  serenity.rs  server.rs  server_process.rs  ws_protocol.rs
minecraft/src/serenity/: config.rs  json.rs  mod.rs  players.rs  tp_locations.rs
minecraft/src/server/: fs.rs  mod.rs  parser.rs  process.rs
smart_bjorn/: Cargo.toml
smart_bjorn/src/: main.rs
src/: main.rs
valheim/: Cargo.toml
valheim/src/: client.rs  lib.rs  serenity.rs  server.rs
valheim/src/serenity/: attack_messages.rs  config.rs  json.rs  players.rs
valheim/src/server/: parser.rs  process.rs  utils.rs
web/: Cargo.toml
web/src/: app.rs  main.rs  ws_client.rs
web_client/: Cargo.toml  index.html
web_client/src/: app.rs  main.rs  ws_client.rs
web_server/: Cargo.toml  Rocket.toml
web_server/src/: cors.rs  main.rs
ws_protocol/: Cargo.toml
ws_protocol/src/: client.rs  lib.rs  message.rs  serenity.rs  server.rs  workers.rs
ws_protocol/src/client/: canceller.rs  mod.rs  mpsc.rs  runner.rs  serenity.rs  ws_task.rs
ws_protocol/src/server/: canceller.rs  mod.rs  runner.rs
ws_server/: Cargo.toml
ws_server/src/: main.rs
