[package]
name = "discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.5", features = ["client", "model", "gateway", "rustls_backend"] }
serenity_ctrlc = "0.3.0"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
config = { path = "../config" }
ws_protocol = { path = "../ws_protocol", features = ["serenity"] }
minecraft = { path = "../minecraft", features = ["serenity"] }
