[package]
name = "discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.5", features = ["client", "model", "gateway", "rustls_backend"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
ws_protocol = { path = "../ws_protocol", features = ["tokio", "serenity"] }
minecraft = { path = "../minecraft", features = ["serenity", "ws_protocol"] }
game_server = { path = "../game_server" }
futures-util = { version = "0.3.25" }
serde = { version = "1.0.152", features = ["derive"] }
