[package]
name = "game_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.2.4"
minecraft = { path = "../minecraft" }
valheim = { path = "../valheim" }
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread", "sync"] }
ws_protocol = { path = "../ws_protocol", features = ["client"] }
