[package]
name = "game_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.5", features = ["client", "model", "gateway", "rustls_backend"], optional = true }

[features]
serenity = ["dep:serenity"]
