[package]
name = "minecraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game_server = { path = "../game_server" }
serenity = { version = "0.11.5", features = ["client", "model", "gateway", "rustls_backend"], optional = true }
ws_protocol = { path = "../ws_protocol", optional = true }

[features]
server_process = []
serenity = ["dep:serenity", "ws_protocol/serenity"]
ws_protocol = ["dep:ws_protocol", "game_server/ws_protocol", "server_process"]
