[package]
name = "minecraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws_protocol = { path = "../ws_protocol", features = ["serenity"] }
bjorn_macro = { path = "../bjorn_macro" }
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
serenity = { version = "0.11.5", features = ["client", "model", "gateway", "rustls_backend"] }
tokio = { version = "1.24.1", features = ["rt", "time"] }
