[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-hooks = "0.2.0"
stylist = { version = "0.11", features = ["yew_integration"] }
wasm-bindgen = "0.2.83"
js-sys = "0.3.60"
wasm-bindgen-futures = "0.4.33"

[dependencies.web-sys]
version = "0.3.60"
features = [
    "Window",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "WebSocket",
    "console"
]