[package]
name = "ws_protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.61"
futures-channel = { version = "0.3.25" }
futures-util = { version = "0.3.25" }
tokio = { version = "1.24.1", features = ["rt", "time"] }
tungstenite = { version = "0.18.0" }
tokio-tungstenite = { version = "0.18.0" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.91" }
serenity = { version = "0.11.5", features = ["client"], optional = true }

[features]
client = []
server = []
serenity = ["client", "dep:serenity"]
